--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -2,6 +2,7 @@
 
 body, input, button {
   font-family: 'Roboto', sans-serif;
+  padding: 80px 0 0 0;
 }
 
 header {
@@ -82,4 +83,66 @@ header button svg {
 
 header button svg .fill {
   fill: #81d8d8;
+}
+
+.wrapper {
+  width: 100%;
+  float: left;
+  padding: 15px;
+}
+
+ul.task_lists{
+  width: 100%;
+  float: left;
+}
+
+ul.task_lists li {
+  width: 100%;
+  min-height: 50px;
+  float: left;
+  font-size: 14px;
+  font-weight: 500;
+  color: #444;
+  position: relative;
+  padding: 0 100px 0 0;
+  line-height: 22px;
+  background: #fff;
+  box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
+  margin: 0 0 10px 0;
+}
+
+ul.task_lists li:last-of-type {
+  margin: 0;
+}
+
+ul.task_lists li .buttons {
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+ul.task_lists li .buttons button {
+  width: 50px;
+  height: 50px;
+  float: left;
+  background: none;
+  position: relative;
+  border: 0px;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+ul.todo li .buttons button:last-of-type:before {
+  content: '';
+  width: 1px;
+  height: 30px;
+  background: #edf0f1;
+  position: absolute;
+  top: 10px;
+  left: 0;
 }
