--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -137,7 +137,7 @@ ul.task_lists li .buttons button {
   -moz-appearance: none;
 }
 
-ul.todo li .buttons button:last-of-type:before {
+ul.task_lists li .buttons button:last-of-type:before {
   content: '';
   width: 1px;
   height: 30px;
@@ -145,4 +145,13 @@ ul.todo li .buttons button:last-of-type:before {
   position: absolute;
   top: 10px;
   left: 0;
+}
+
+ul.task_lists li .buttons button svg {
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -11px 0 0 -11px;
 }
